--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <h1>Guest Table Finder</h1>
-        <input type="text" id="nameInput" placeholder="Enter guest name">
+        <input type="text" id="nameInput" placeholder="הכנס את שם האורח">
         <button onclick="searchGuest()">Search</button>
 
         <div id="result">
-            <p id="tableNumber">Table Number: </p>
-            <p id="guestCount">Number of Guests: </p>
+            <p id="tableNumber">מספר שולחן: </p>
+            <p id="guestCount">מספר אורחים: </p>
         </div>
     </div>
 
