--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guest Table Finder</title>
+    <title>סידור הושבה</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Guest Table Finder</h1>
+        <h1>סידור הושבה</h1>
         <input type="text" id="nameInput" placeholder="הכנס את שם האורח">
-        <button onclick="searchGuest()">Search</button>
+        <button onclick="searchGuest()">חפש</button>
 
         <div id="result">
             <p id="tableNumber">מספר שולחן: </p>
