--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button onclick="searchGuest()">חפש</button>
 
         <div id="result">
+            <p id="tableNumber">שם: </p>
             <p id="tableNumber">מספר שולחן: </p>
             <p id="guestCount">מספר אורחים: </p>
         </div>
