--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>סידור הושבה</h1>
         <input type="text" id="nameInput" placeholder="הכנס את שם האורח">
         <button onclick="searchGuest()">חפש</button>
+        <button onclick="displayFullList()">הצג את כל הרשימה</button>
 
         <div id="result">
 
