--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>סידור הושבה</title>
+    <title>אורי ומוריה - סידור הושבה</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>סידור הושבה</h1>
+        <h1>אורי ומוריה - סידור הושבה</h1>
 
         <!-- Search by Name Section -->
         <div>
