--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Search by Name Section -->
         <div>
-            <input type="text" id="nameInput" placeholder="הכנס את שם האורח">
+            <input type="text" id="nameInput" placeholder="הכנס את שם פרטי ומשפחה">
             <button onclick="searchGuest()">חפש</button>
         </div>
 
