--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             <button onclick="searchByTable()">חפש</button>
         </div>
 
-        <!-- Button to display all guests -->
+        <!-- Button to display all guests 
         <div>
             <button onclick="displayFullList()">הצג את כל הרשימה</button>
         </div>
+		-->
 
         <!-- Result Display Area -->
         <div id="result"></div>
