--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <!-- Search by Name Section -->
         <div>
-            <input type="text" id="nameInput" placeholder="הכנס את שם פרטי ומשפחה">
+            <input type="text" id="nameInput" placeholder="הכנס שם פרטי ומשפחה">
             <button onclick="searchGuest()">חפש</button>
         </div>
 
         <!-- Search by Table Number Section -->
         <div>
-            <input type="text" id="tableInput" placeholder="הכנס את מספר שולחן">
+            <input type="text" id="tableInput" placeholder="הכנס מספר שולחן">
             <button onclick="searchByTable()">חפש</button>
         </div>
 
